<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="19dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/colorWhite"
            android:textSize="29sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/joey"
            android:textColor="@color/colorWhite"
            android:textSize="29sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textHello"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageMenu"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_menu_24"
        app:layout_constraintBottom_toBottomOf="@id/textHello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textHello"
        app:tint="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/white_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageMenu">
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

     <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:overScrollMode="never"
    android:scrollbars="none"
    app:layout_constraintBottom_toTopOf="@id/viewDivider"
    app:layout_constraintTop_toBottomOf="@id/layoutHeader" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/white_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@id/layoutTeamwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/goal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/goals"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTeamwork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/white_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toEndOf="@id/layoutGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/teamwork"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/team"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutThink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/white_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@id/layoutTeamwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutGoal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/thinking"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/think"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCreativity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/white_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toEndOf="@id/layoutThink"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTeamwork">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/creativity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/trendin_background"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="@id/layoutCreativity"
        app:layout_constraintStart_toStartOf="@id/layoutGoal"
        app:layout_constraintTop_toBottomOf="@id/layoutThink">

        <TextView
            android:id="@+id/textTrending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background"
            android:padding="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/trending"
             android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:text="@string/dummy_text"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textTrending"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorWhite"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView" />


</androidx.constraintlayout.widget.ConstraintLayout>