<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".userProfile">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/text_or_icon"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSearch"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_earch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/text_or_icon"
        />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/User_Profile"
        android:textColor="@color/text_or_icon"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageSearch"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"

        />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/joeyn"
        android:textColor="@color/text_or_icon"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"/>


    <TextView
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:text="LIT2021078"
        android:textColor="@color/text_or_icon"
        android:textSize="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUsername"/>

<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
<!--        android:id="@+id/fabAdd"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="2sp"-->
<!--        android:contentDescription="@string/app_name"-->
<!--        android:src="@drawable/ic_baseline_add_24"-->
<!--        app:backgroundTint="@color/dashboard_item"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:iconTint="@color/text_or_icon"-->
<!--        />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEUR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item"
        app:cardCornerRadius="16sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/roll"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eur"
                android:textColor="@color/text_or_icon"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/total"
                android:textColor="@color/text_or_icon"
                android:textSize="36sp"
                android:textStyle="bold"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/History"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item"
        app:cardCornerRadius="16sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/roll"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/cardEUR"
        android:layout_marginStart="200dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hist"
                android:textColor="@color/text_or_icon"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/total"
                android:textColor="@color/text_or_icon"
                android:textSize="36sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/About"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item"
        app:cardCornerRadius="16sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cardEUR"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Abo"
                android:textColor="@color/text_or_icon"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/total"
                android:textColor="@color/text_or_icon"
                android:textSize="36sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/Me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item"
        app:cardCornerRadius="16sp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/History"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/About"
        android:layout_marginStart="200dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Me"
                android:textColor="@color/text_or_icon"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/total"
                android:textColor="@color/text_or_icon"
                android:textSize="36sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorWhite"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:menu="@menu/navigation_menu" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView" />




</androidx.constraintlayout.widget.ConstraintLayout>